--- a/css/v2/newmain2.css
+++ b/css/v2/newmain2.css
@@ -1557,21 +1557,7 @@ h3.sign_title {
 /* .horisontal_left {
     max-width: 410px;
     margin-right: 220px;
-    } */
-    
-.horisontal_left {
-         display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-        align-content: flex-start;
-        padding: 0 14vw 4vh 14vw;
-        /* text-align: center;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        height: 100%; */
-    }
-   
+    } */  
    
 } 
 .horisontal_left p {
@@ -3311,7 +3297,7 @@ details[open] summary:after {
     display: flex;
    flex-direction: column;
    align-items: flex-start;
-   padding: 0 14vw 4vh;
+   padding: 0 14vw;
     text-align: center;
    /* text-align: center;
    display: flex;
