--- a/css/v2/newmain2.css
+++ b/css/v2/newmain2.css
@@ -3312,6 +3312,75 @@ details[open] summary:after {
     right: -2px;
   }
 }
+.item {
+    /* font-size: 30px; */
+    transform: translate(-100%, 0px);
+    opacity: 0;
+    animation: item-slide 1s forwards;
+ }
+ @keyframes item-slide {
+    100% {
+      opacity: 1;
+      transform: translate(0px, 0px); } }
+  .item:not(:last-child) {
+    margin-bottom: 1px; }
+  
+  .item:nth-child(1) {
+    animation-delay: 0s; }
+  
+  .item:nth-child(2) {
+    animation-delay: 0.2s; }
+  
+  .item:nth-child(3) {
+    animation-delay: 0.4s; }
+  
+  .item:nth-child(4) {
+    animation-delay: 0.6s; }
+  
+  .item:nth-child(5) {
+    animation-delay: 0.8s; 
+}
+
+.parallax {
+    /* The image used */
+    background-image: url("../img/1645709418_26-kartinkin-net-p-informatsionnie-tekhnologii-kartinki-30.jpg");
+
+    /* Set a specific height */
+    height: 870px;
+
+    /* Create the parallax scrolling effect */
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+} 
+.parallax1 {
+    /* The image used */
+    background-image: url("../img/1645709436_16-kartinkin-net-p-informatsionnie-tekhnologii-kartinki-19.jpg");
+
+    /* Set a specific height */
+    height: 800px;
+
+    /* Create the parallax scrolling effect */
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.parallax2 {
+    /* The image used */
+    background-image: url("../img/1645709464_21-kartinkin-net-p-informatsionnie-tekhnologii-kartinki-25.jpg");
+
+    /* Set a specific height */
+    height: 200px;
+
+    /* Create the parallax scrolling effect */
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
 
 
 
