--- a/css/v2/newmain2.css
+++ b/css/v2/newmain2.css
@@ -787,8 +787,10 @@ box-shadow:  -20px 20px 60px #d2d2d3,
     width: 595px;
     height: 475px;
 background-color: #F7F7F8;
-border-radius: 20px;
-box-shadow: -20px 10px 20px #d2d2d3, 9px -20px 20px #ffffff;
+border-radius: 18px;
+background: linear-gradient(145deg, #ffffff, #dededf);
+box-shadow:  6px 6px 12px #a3a3a4,
+             -6px -6px 12px #ffffff;
 }
 
 
@@ -3076,9 +3078,9 @@ width: 18px;
     padding: 64px;
     border-radius:  15px;
     text-align: center;
-   
-background: #F7F7F8;
-box-shadow: -20px 10px 20px #d2d2d3, 9px -20px 20px #ffffff;
+    background: linear-gradient(145deg, #ffffff, #dededf);
+    box-shadow:  6px 6px 12px #a3a3a4,
+                 -6px -6px 12px #ffffff;
 }
 .email-to-forward  {
     
