--- a/css/v2/newmain2.css
+++ b/css/v2/newmain2.css
@@ -731,19 +731,23 @@ box-shadow:  -20px 20px 60px #d2d2d3,
     z-index: 1;
 } */
 .triple_item_img img {
-    height: 100px;
-    object-fit: contain;
-    object-position: center;
+    
+        /* height: 100px; */
+        object-fit: contain;
+        object-position: center;
+        width: 55px;
+        margin: 120px auto 0;
+    
 }
 .triple_item_name {
-    margin-top: 52px;
+    margin-top: 30px;
     font-size: 21px;
     font-weight: 500;
     text-align: center;
 }
 .triple_item_text {
     --color: var(--gray);
-    margin-top: 16px;
+    margin: 16px auto 40px;
     text-align: center;
     line-height: 1.5;
 }
